--- a/templates/tpos/index.html
+++ b/templates/tpos/index.html
@@ -463,10 +463,10 @@
           label="Unique values only"
           filled
           v-model="itemDialog.data.categories"
+          :options="categoryList"
           use-input
           use-chips
           multiple
-          hide-dropdown-icon
           input-debounce="0"
           @new-value="createValue"
         ></q-select>
@@ -853,6 +853,20 @@
           show: false,
           data: {}
         }
+      }
+    },
+    computed: {
+      categoryList() {
+        return this.tposs.reduce((acc, tpos) => {
+          tpos.items.forEach(item => {
+            item.categories.forEach(category => {
+              if (!acc.includes(category)) {
+                acc.push(category)
+              }
+            })
+          })
+          return acc
+        }, [])
       }
     },
     methods: {
