--- a/templates/tpos/index.html
+++ b/templates/tpos/index.html
@@ -591,6 +591,7 @@
       return {
         tposs: [],
         currencyOptions: [
+          'satoshis',
           'USD',
           'EUR',
           'GBP',
@@ -862,11 +863,11 @@
         return this.tposs.reduce((acc, tpos) => {
           tpos.items.forEach(item => {
             item.categories &&
-            item.categories.forEach(category => {
-              if (!acc.includes(category)) {
-                acc.push(category)
-              }
-            })
+              item.categories.forEach(category => {
+                if (!acc.includes(category)) {
+                  acc.push(category)
+                }
+              })
           })
           return acc
         }, [])
@@ -1013,6 +1014,11 @@
       itemFormatPrice(price, id) {
         const tpos = id.split(':')[0]
         const currency = _.findWhere(this.tposs, {id: tpos}).currency
+
+        if (currency == 'satoshis') {
+          return Number(price).toFixed(0) + ' sat'
+        }
+
         return LNbits.utils.formatCurrency(Number(price).toFixed(2), currency)
       },
       openItemDialog(id) {
@@ -1158,10 +1164,14 @@
           id: tpos.wallet
         })
         data.forEach(item => {
-          item.formattedPrice = LNbits.utils.formatCurrency(
-            Number(item.price).toFixed(2),
-            tpos.currency
-          )
+          if (tpos.currency == 'satoshis') {
+            item.formattedPrice = Number(item.price).toFixed(0) + ' sat'
+          } else {
+            item.formattedPrice = LNbits.utils.formatCurrency(
+              Number(item.price).toFixed(2),
+              tpos.currency
+            )
+          }
         })
         this.fileDataDialog.data = data
         this.fileDataDialog.count = data.length
