--- a/templates/tpos/tpos.html
+++ b/templates/tpos/tpos.html
@@ -30,7 +30,11 @@
           </h5>
           <div v-if="total > 0.0">
             <h5>
-              <i>Total: ${totalFormatted}<br />${totalfsat} sat</i>
+              <i
+                >Total: ${totalFormatted}<span v-if="!denomIsSats"
+                  ><br />${totalfsat} sat</span
+                ></i
+              >
             </h5>
           </div>
         </div>
@@ -760,7 +764,7 @@
         searchTerm: '',
         categoryFilter: '',
         cart: new Map(),
-        denomIsSats: '{{ tpos.currency }}' == 'satoshi'
+        denomIsSats: '{{ tpos.currency }}' == 'sats'
       }
     },
     computed: {
@@ -768,38 +772,17 @@
         if (!this.stack.length) return 0.0
         return (
           this.stack.reduce((acc, dig) => acc * 10 + dig, 0) *
-          (this.currency == 'satoshi' ? 1 : 0.01)
+          (this.currency == 'sats' ? 1 : 0.01)
         )
       },
       amountFormatted: function () {
-        if (this.currency == 'satoshi') {
-          return LNbits.utils.formatSat(this.amount) + ' sat'
-        } else {
-          return LNbits.utils.formatCurrency(
-            this.amount.toFixed(2),
-            this.currency
-          )
-        }
+        return this.formatAmount(this.amount, this.currency)
       },
       totalFormatted() {
-        if (this.currency == 'satoshi') {
-          return LNbits.utils.formatSat(this.total) + ' sat'
-        } else {
-          return LNbits.utils.formatCurrency(
-            this.total.toFixed(2),
-            this.currency
-          )
-        }
+        return this.formatAmount(this.total, this.currency)
       },
       amountWithTipFormatted: function () {
-        if (this.currency == 'satoshi') {
-          return LNbits.utils.formatSat(this.amount) + ' sat'
-        } else {
-          return LNbits.utils.formatCurrency(
-            (this.amount + this.tipAmount).toFixed(2),
-            this.currency
-          )
-        }
+        return this.formatAmount(this.amount + this.tipAmount, this.currency)
       },
       sat: function () {
         if (!this.exchangeRate) return 0
@@ -1021,7 +1004,7 @@
       },
       submitForm: function () {
         if (this.total != 0.0) {
-          if (this.currency == 'satoshi') {
+          if (this.currency == 'sats') {
             this.stack = Array.from(String(Math.ceil(this.total), Number))
           } else {
             this.stack = Array.from(String(Math.ceil(this.total * 100)), Number)
@@ -1209,7 +1192,7 @@
           })
       },
       getRates() {
-        if (this.currency == 'satoshi') {
+        if (this.currency == 'sats') {
           this.exchangeRate = 1
         } else {
           LNbits.api
@@ -1274,6 +1257,16 @@
         } else {
           this.categoryFilter = category == 'All' ? '' : category
         }
+      },
+      formatAmount: function (amount, currency) {
+        if (currency == 'sats') {
+          return LNbits.utils.formatSat(amount) + ' sat'
+        } else {
+          return LNbits.utils.formatCurrency(
+            Number(amount).toFixed(2),
+            currency
+          )
+        }
       }
     },
     created: function () {
@@ -1290,14 +1283,7 @@
 
       this.items = JSON.parse(`{{ tpos.items | safe }}`)
       this.items.forEach((item, id) => {
-        if (this.currency == 'satoshi') {
-          item.formattedPrice = LNbits.utils.formatSat(item.price) + ' sat'
-        } else {
-          item.formattedPrice = LNbits.utils.formatCurrency(
-            item.price,
-            this.currency
-          )
-        }
+        item.formattedPrice = this.formatAmount(item.price, this.currency)
         item.id = id
         return item
       })
